<resources>
    <string name="app_name">Android_academy_app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_title">Avengers: \nEnd Game</string>
    <string name="movie_genre">Action, Adventure, Fantasy</string>
    <string name="move_poster_content_description">Move poster</string>
    <string name="_125_reviews">125 reviews</string>
    <string name="storyline_label">Storyline</string>
    <string name="movie_storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="movie_age_rating">13+</string>
    <string name="actor_photo">Actor photo</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="back"><![CDATA[<   Back]]></string>
    <string name="rating_icon">rating_icon</string>
    <string name="go_see_a_movie">Go see a movie!</string>
</resources>