<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    tools:context=".MovieDetailsActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="132dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#191926"
            tools:context=".MovieDetailsActivity">

            <ImageView
                android:id="@+id/movie_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/move_poster_content_description"
                android:foreground="@drawable/background_gradient"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/movie_genre"
                android:textColor="#FF3466"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:letterSpacing="-0.01"
                android:lineSpacingMultiplier="1"
                android:text="@string/movie_title"
                android:textColor="#ECECEC"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="40sp" />

            <TextView
                android:id="@+id/movie_reviews_total"
                android:layout_width="78dp"
                android:layout_height="20dp"
                android:layout_marginStart="103dp"
                android:layout_marginTop="362dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/_125_reviews"
                android:textColor="#6D6D80"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_storyline_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="406dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/storyline_label"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_storyline_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="430dp"
                android:layout_marginEnd="16dp"
                android:shadowDx="0"
                android:shadowDy="12"
                android:text="@string/movie_storyline_text"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="20dp" />

            <TextView
                android:id="@+id/movie_cast_label"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="554dp"
                android:text="@string/cast"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_age_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="226dp"
                android:text="@string/movie_age_rating"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rating_icon1"
                android:layout_width="12sp"
                android:layout_height="12sp"
                android:layout_marginTop="366dp"
                android:contentDescription="@string/rating_icon"
                app:layout_constraintEnd_toStartOf="@+id/rating_icon2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/star_icon" />

            <ImageView
                android:id="@+id/rating_icon2"
                android:layout_width="12sp"
                android:layout_height="12sp"
                android:layout_marginTop="366dp"
                android:contentDescription="@string/rating_icon"
                app:layout_constraintEnd_toStartOf="@+id/rating_icon3"
                app:layout_constraintStart_toEndOf="@+id/rating_icon1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/star_icon" />

            <ImageView
                android:id="@+id/rating_icon3"
                android:layout_width="12sp"
                android:layout_height="12sp"
                android:layout_marginTop="366dp"
                android:contentDescription="@string/rating_icon"
                app:layout_constraintEnd_toStartOf="@+id/rating_icon4"
                app:layout_constraintStart_toEndOf="@+id/rating_icon2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/star_icon" />

            <ImageView
                android:id="@+id/rating_icon4"
                android:layout_width="12sp"
                android:layout_height="12sp"
                android:layout_marginTop="366dp"
                android:contentDescription="@string/rating_icon"
                app:layout_constraintEnd_toStartOf="@+id/rating_icon5"
                app:layout_constraintStart_toEndOf="@+id/rating_icon3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/star_icon" />

            <ImageView
                android:id="@+id/rating_icon5"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="366dp"
                android:contentDescription="@string/rating_icon"
                app:layout_constraintEnd_toStartOf="@+id/movie_reviews_total"
                app:layout_constraintStart_toEndOf="@+id/rating_icon4"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/star_icon_unset" />

            <ImageView
                android:id="@+id/Actor1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="585dp"
                android:contentDescription="@string/actor_photo"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/robert_downey_jr" />

            <ImageView
                android:id="@+id/Actor2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="584dp"
                android:contentDescription="@string/actor_photo"
                app:layout_constraintStart_toEndOf="@id/Actor1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/chris_evans" />

            <ImageView
                android:id="@+id/Actor3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="584dp"
                android:contentDescription="@string/actor_photo"
                app:layout_constraintStart_toEndOf="@id/Actor2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mark_ruffalo" />

            <ImageView
                android:id="@+id/Actor4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="584dp"
                android:contentDescription="@string/actor_photo"
                app:layout_constraintStart_toEndOf="@id/Actor3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/chris_hemsworth" />

            <TextView
                android:id="@+id/Actor_name_1"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginTop="671dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/robert_downey_jr"
                android:textColor="#D8D8D8"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="16sp" />

            <TextView
                android:id="@+id/Actor_name_2"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginStart="104dp"
                android:layout_marginTop="668dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/chris_evans"
                android:textColor="#D8D8D8"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="16sp" />

            <TextView
                android:id="@+id/Actor_name_3"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginStart="192dp"
                android:layout_marginTop="668dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/mark_ruffalo"
                android:textColor="#D8D8D8"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="16sp" />

            <TextView
                android:id="@+id/Actor_name_4"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginStart="280dp"
                android:layout_marginTop="668dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/chris_hemsworth"
                android:textColor="#D8D8D8"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="16sp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="54dp"
                android:text="@string/back"
                android:textColor="#6D6D80"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>